[package]
authors = ["Wraithan (Chris McDonald) <xwraithanx@gmail.com>"]
description = "Increments the version number of the current project."
keywords = ["cargo", "version"]
license = "ISC"
name = "cargo-bump"
readme = "README.md"
repository = "https://github.com/wraithan/cargo-bump"
version = "1.0.1"

[badges]
travis-ci = {repository = "wraithan/cargo-bump", branch = "master" }

[dependencies]
clap = "2.26.0"
semver = "0.7.0"
tomllib = "0.1.2"
