[package]
authors = ["Wraithan (Chris McDonald) <xwraithanx@gmail.com>"]
description = "Increments the version number of the current project."
keywords = ["cargo", "version", "bump"]
license = "ISC"
name = "cargo-bump"
readme = "README.md"
repository = "https://github.com/wraithan/cargo-bump"
version = "1.2.0"

[badges]
travis-ci = {repository = "wraithan/cargo-bump", branch = "master" }

[dependencies]
clap = "2.26.0"
semver = "0.9.0"
toml_edit = "0.1.3"
cargo_metadata = "0.7.0"
